<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michal.dietvoltwo.activity.DataUserActivity"
    tools:showIn="@layout/activity_data_user">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/age_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35px"
            android:text="@string/age_text_view"
            android:textSize="10dp" />

        <SeekBar
            android:id="@+id/age_data_user_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="110" />

        <TextView
            android:id="@+id/weight_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/weight_text_view"
            android:textSize="10dp" />

        <SeekBar
            android:id="@+id/weight_data_user_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="220" />

        <TextView
            android:id="@+id/height_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/height_text_view"
            android:textSize="10dp" />

        <SeekBar
            android:id="@+id/height_data_user_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="250" />

        <TextView
            android:id="@+id/goal_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/goal_text_view"
            android:textSize="10dp" />

        <RadioGroup
            android:id="@+id/gol_fragment_data_user_radio_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/reduction_data_user_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reduction_goal_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/state_data_user_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/stait_goal_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/mass_data_user_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mass_goal_text_view"
                android:textSize="12dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/lvl_activity_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/lvl_activity_text_view"
            android:textSize="10dp" />

        <RadioGroup
            android:id="@+id/lvl_activity_data_user_radio_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/lvl_low_activity_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_lvl_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/lvl_medium_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/midium_lvl_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/lvl_height_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_lvl_text_view"
                android:textSize="12dp" />
        </RadioGroup>


        <TextView
            android:id="@+id/typ_diet_data_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/typ_diet_text_view"
            android:textSize="10dp" />

        <RadioGroup
            android:id="@+id/diet_type_data_user_radio_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/carbo_diet_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carbo_diet_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/stabile_diet_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/stabile_diet_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/protein_diet_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protein_diet_text_view"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/fat_diet_data_user_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fat_diet_text_view"
                android:textSize="12dp" />
        </RadioGroup>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
