<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35px"
            android:text="@string/name_text_view"
            android:textColor="@color/cardview_light_background" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Jan..."
            android:inputType="textPersonName"
            android:shadowColor="@color/cardview_light_background"
            android:textColor="@color/cardview_light_background"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:textColorLink="@color/cardview_light_background" />

        <TextView
            android:id="@+id/passTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35px"
            android:shadowColor="@color/cardview_light_background"
            android:text="@string/pass_text_view"
            android:textColor="@color/cardview_light_background"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:textColorLink="@color/cardview_light_background" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/rePassTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/re_pass_text_view"
            android:textColor="@color/cardview_light_background" />

        <EditText
            android:id="@+id/rePassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35px"
            android:text="@string/email_text_view"
            android:textColor="@color/cardview_light_background" />

        <EditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="JanKowalski@gmail.com..."
            android:inputType="textPersonName"
            android:shadowColor="@color/cardview_light_background"
            android:textColor="@color/cardview_light_background"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:textColorLink="@color/cardview_light_background" />

    </LinearLayout>
</android.support.v7.widget.CardView>